# htlfc

./: README.md  htlfc.py  pyproject.toml  setup.cfg
.github/workflows/: build-and-publish.yaml  push-version.yaml  tag-and-release.yaml  tag-version.yaml  version-update.yaml
agents/: Agents_API.md  filedir.py  loader.py  maff.py  mht.py  war.py
docs/: AboutLicense.md  Banner.md  CONTRIBUTING.md  INSTALL.md  Integration.md  README.md  Workflows.md
gui/: converter.py  find.py  main.py  select.py  viewer.py
merger/: convert.py  manifest.py  xmltree.py
share/mime/: References.md  maff.xml  mht.xml  war.xml
src/: htlfc-b.py  htlfc.py
src/agents/: filedir.py  war.py
src/gui/: find.py  select.py
src/htlfc/: ABOUT.md  VERSION  __init__.py  main.py  version.py
src/htlfc/agents/: Agents_API.md  codecs.py  filedir.py  loader.py  maff.py  mht.py  utility.py
src/htlfc/gui/: converter.py  find.py  interface.py  select.py  viewer.py
src/htlfc/merger/: convert.py  infobar.css  manifest.py  xmltree.py
src/merger/: convert.py
