[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "htlfc"
description = "Hypertext Legacy File Converter"
readme = "src/htlfc/ABOUT.md"
requires-python = ">=3.7"
keywords = [ "hypertext", "html", "mht", "mhtml", "maff" ]
license = { text="AGPLv3+" }
classifiers =[
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3.6",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]
dependencies = [
    "lxml",
    "chardet",
]
dynamic = ["version"]

[project.scripts]
htlfc = "htlfc:run_htlfc"
htlfc-b = "htlfc:run_htlfc_b"

[tool.setuptools.packages.find]
where = ["src"]
include = ["htlfc*"]

[tool.setuptools.package-data]
htlfc = ["VERSION","ABOUT.md"]

[tool.setuptools.dynamic]
version = { file = ["src/htlfc/VERSION"] }

