[metadata]
name = htlfc
description = Hypertext Legacy File Converter
long_description = Unpacks and converts the following file types into a single .html file:
    .maff - Mozilla Archive File Format, from the Firefox extension of the same name.
    .mht - MIME Hypertext.
    .war - Web ARchive, from the KDE Konqueror web browser.
    file+dir - web page saved as filename.html plus filename_files directory.
keywords = hypertext, html, mht, maff
license = GNU Affero General Public License Version 3
classifiers =
    Intended Audience :: End Users/Desktop
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent
    Topic :: Internet :: WWW/HTTP :: Browsers

[options]
package_dir =
    = src
packages =
    htlfc.agents
    htlfc.gui
    htlfc.merger
py_modules =
    htlfc.main

python_requires =
    >=3.6
install_requires =
    lxml
    chardet

[options.entry_points]
console_scripts =
    htlfc = htlfc:run_htlfc
